rpi5/calibre/web/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: calibre-web
  labels:
    app: calibre-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibre-web
  serviceName: calibre-web
  template:
    metadata:
      name: calibre-web
      annotations:
        linkerd.io/inject: "enabled"
        reloader.stakater.com/auto: "true"
      labels:
        app: calibre-web
    spec:
      containers:
        - name: calibre-web
          image: crocodilestick/calibre-web-automated:dev@sha256:599b99bbae1a297fa8169734cf9267dc97c330f5c9abd21ebdaab32869c9a42c
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /config
              name: data
            - mountPath: /calibre-library
              name: books
            - mountPath: /cwa-book-ingest
              name: ingest
            - mountPath: /etc/ssl/certs/ca-certificates.crt
              name: ca
              subPath: ca.crt
          readinessProbe:
            httpGet:
              port: 8083
              path: /
          livenessProbe:
            tcpSocket:
              port: 8083
            initialDelaySeconds: 60
      restartPolicy: Always
      securityContext:
        fsGroup: 3002
      volumes:
        - name: books
          hostPath:
            path: "/data/Calibre Library"
        - name: ingest
          hostPath:
            path: "/data/BookImport/calibre"
        - name: ca
          configMap:
            name: anshulg-ca
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
