rpi5/calibre/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
spec:
  selector:
    app: calibre-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
